--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,11 @@ html body {
   -webkit-text-stroke: 0.7px #00abf0;
   padding: 4% 0;
 }
+@media (max-width: 1000px) {
+  .about .fa-laptop-code {
+    display: none;
+  }
+}
 .about .about-content {
   max-width: 60em;
   z-index: 50;
@@ -82,6 +87,9 @@ html body {
   font-size: 5.5em;
   font-weight: 700;
   line-height: 1.3;
+}
+.about .about-content span {
+  color: #00abf0;
 }
 .about .about-content .text-animated {
   position: relative;
@@ -217,6 +225,349 @@ html body {
 .about .about-imgHover:hover {
   background: #081b29;
   opacity: 0.5;
+}
+@media (max-width: 1000px) {
+  .about .about-imgHover {
+    display: none;
+  }
+}
+
+.proyects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: auto;
+  padding-bottom: 2em 0 5em 0;
+  background: #112e42;
+}
+.proyects .heading {
+  font-size: 5em;
+  margin: 1em 0 2em 0;
+  text-align: center;
+}
+.proyects .heading span {
+  color: #00abf0;
+}
+.proyects .proyects-box {
+  border-left: 0.2em solid #00abf0;
+  width: 49%;
+  margin-bottom: 19em;
+}
+.proyects .proyects-box .proyects-content {
+  position: relative;
+  padding-left: 2em;
+}
+.proyects .proyects-box .proyects-content .content {
+  position: relative;
+  padding: 1em;
+  border: 0.2em solid #00abf0;
+  border-radius: 0.5em;
+  margin-bottom: 2em;
+}
+.proyects .proyects-box .proyects-content .content .year {
+  font-size: 1.5em;
+  color: #ededed;
+  padding-bottom: 1em;
+  letter-spacing: 0.1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.proyects .proyects-box .proyects-content .content .year .fa-calendar-days {
+  padding-right: 0.5em;
+  font-size: 1.5em;
+  color: #00abf0;
+}
+.proyects .proyects-box .proyects-content .content .year .date {
+  color: #00abf0;
+  padding: 0.5em 0;
+}
+.proyects .proyects-box .proyects-content .content .year .description {
+  padding: 0.5em 0;
+}
+.proyects .proyects-box .proyects-content .content .year img {
+  padding: 0.5em 0;
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  background: #081b29;
+  padding-bottom: 7em;
+  min-height: auto;
+}
+.skills .heading {
+  font-size: 5em;
+  margin: 1em 0 2em 0;
+  text-align: center;
+}
+.skills .heading span {
+  color: #00abf0;
+}
+.skills .skills-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5em;
+}
+.skills .skills-row .skills-column {
+  flex: 1 1 40em;
+}
+.skills .skills-row .skills-column .title {
+  font-size: 2.5em;
+  margin: 0 0 1.5em;
+}
+.skills .skills-row .skills-column .skills-box .skills-content {
+  position: relative;
+  border: 0.2em solid #00abf0;
+  border-radius: 0.6em;
+  padding: 0.5em 1.5em;
+  z-index: 1;
+  overflow: hidden;
+}
+.skills .skills-row .skills-column .skills-box .skills-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #112e42;
+  opacity: 0.6;
+  z-index: -1;
+  transition: 1s;
+}
+.skills .skills-row .skills-column .skills-box .skills-content:hover::before {
+  width: 100%;
+}
+.skills .skills-row .skills-column .skills-box .skills-content .progress {
+  padding: 1em 0;
+}
+.skills .skills-row .skills-column .skills-box .skills-content .progress h3 {
+  font-size: 1.7em;
+  display: flex;
+  justify-content: space-between;
+}
+.skills .skills-row .skills-column .skills-box .skills-content .progress h3 span {
+  color: #ededed;
+}
+.skills .skills-row .skills-column .skills-box .skills-content .progress .bar {
+  height: 2.5em;
+  border-radius: 0.6em;
+  border: 0.2em solid #00abf0;
+  padding: 0.5em;
+  margin: 1em 0;
+}
+.skills .skills-row .skills-column .skills-box .skills-content .progress .bar span {
+  display: block;
+  height: 100%;
+  border-radius: 0.2em;
+  background: #00abf0;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
+  width: 90%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
+  width: 80%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
+  width: 90%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
+  width: 70%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
+  width: 90%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
+  width: 85%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
+  width: 40%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
+  width: 85%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
+  width: 60%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span {
+  width: 35%;
+}
+
+.contact {
+  padding: 2em 0 7em 0;
+  min-height: auto;
+  background: #112e42;
+}
+.contact .heading {
+  font-size: 5em;
+  margin: 1em 0 2em 0;
+  text-align: center;
+}
+.contact .heading span {
+  color: #00abf0;
+}
+.contact form {
+  max-width: 70em;
+  margin: 0 auto;
+  text-align: center;
+}
+.contact form .input-box {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact form .input-box .input-field {
+  position: relative;
+  width: 49%;
+  margin: 0.8em 0;
+}
+.contact form .input-box .input-field .input {
+  width: 100%;
+  height: 100%;
+  padding: 1.5em;
+  font-size: 1.6em;
+  color: #ededed;
+  background: transparent;
+  border-radius: 0.5em;
+  border: 0.2em solid #00abf0;
+}
+.contact form .input-box .input-field .input::placeholder {
+  color: #ededed;
+  opacity: 0.6;
+}
+.contact form .textarea-field {
+  position: relative;
+  margin: 0.8em 0 2.7em;
+  display: flex;
+}
+.contact form .textarea-field textarea {
+  width: 100%;
+  height: 100%;
+  padding: 1.5em;
+  font-size: 1.6em;
+  color: #ededed;
+  background: transparent;
+  border-radius: 0.5em;
+  border: 0.2em solid #00abf0;
+  resize: none;
+}
+.contact form .textarea-field textarea::placeholder {
+  color: #ededed;
+  opacity: 0.6;
+}
+.contact form .btn-box {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 5em;
+}
+.contact form .btn-box .btn {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 12em;
+  height: 100%;
+  background: #00abf0;
+  border: 0.2em solid #00abf0;
+  border-radius: 0.4em;
+  font-size: 1.8em;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  color: #081b29;
+  margin: 0 4%;
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.contact form .btn-box .btn:hover {
+  color: #00abf0;
+}
+.contact form .btn-box .btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #112e42;
+  z-index: -1;
+  transition: 0.5s;
+}
+.contact form .btn-box .btn:hover::before {
+  width: 100%;
+}
+.contact form .btn-box .btn:nth-child(2) {
+  background: transparent;
+  color: #00abf0;
+}
+.contact form .btn-box .btn:nth-child(2)::before {
+  background: #00abf0;
+}
+.contact form .btn-box .btn:nth-child(2):hover {
+  color: #112e42;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2em 9%;
+  background: #081b29;
+}
+footer .footer-text {
+  font-size: 1.4em;
+  opacity: 0.8;
+}
+footer .footer-iconTop {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8em;
+  background: #00abf0;
+  border: 0.2em solid #00abf0;
+  border-radius: 0.5em;
+  z-index: 1;
+  overflow: hidden;
+}
+footer .footer-iconTop:hover i {
+  color: #00abf0;
+}
+footer .footer-iconTop::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #081b29;
+  z-index: -1;
+  transition: 0.5s;
+}
+footer .footer-iconTop:hover::before {
+  width: 100%;
+}
+footer .footer-iconTop .fa-arrow-up {
+  font-size: 2.2em;
+  color: #081b29;
+  transition: 0.5s;
 }
 
 /*# sourceMappingURL=styles.css.map */
