--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -17,6 +17,9 @@
         color: transparent;
         -webkit-text-stroke: 0.7px $main-color;
         padding: 4% 0;
+        @media(max-width: 1000px){
+            display: none;
+        }
     }
     .about-content{
         max-width: 60em;
@@ -26,6 +29,9 @@
             font-size: 5.5em;
             font-weight: 700;
             line-height: 1.3;
+        }
+        span{
+            color: $main-color;
         }
         .text-animated{
             position: relative;
@@ -161,6 +167,9 @@
         &:hover{
             background: $bg-color;
             opacity: 0.5;
+        }
+        @media(max-width: 1000px){
+            display: none;
         }
     }
 }
